wip communication between FrontEnd and BackEnd

--- a/web/client/public/index.html
+++ b/web/client/public/index.html
@@ -19,7 +19,7 @@
         <alerts></alerts>
 
         <!-- Header -->
-        <layout-header></layout-header>
+        <ui-header></ui-header>
 
         <!-- Sidebar -->
         <layout-sidebar></layout-sidebar>
