--- a/web/index.html
+++ b/web/index.html
@@ -34,11 +34,11 @@
         </div>
 
         <!-- Libraries (see Gruntfile.js to know what's included in js/lib.js) -->
-        <!--<script type="text/javascript" src="js/lib.min.js"></script>-->
-        <script type="text/javascript" src="js/lib.js"></script>
+        <script type="text/javascript" src="js/lib.min.js"></script>
+        <!--<script type="text/javascript" src="js/lib.js"></script>-->
 
         <!-- AngularJS App -->
-        <!--<script type="text/javascript" src="js/app.min.js"></script>-->
-        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/app.min.js"></script>
+        <!--<script type="text/javascript" src="js/app.js"></script>-->
     </body>
 </html>
