--- a/client/public/index2.html
+++ b/client/public/index2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="UTF-8" />
@@ -11,38 +12,11 @@
 
         <!-- Theme style -->
         <!--<link type="text/css" rel="stylesheet" href="dist/css/app.min.css" />-->
-
-        <!-- 1. Load libraries -->
-        <!-- IE required polyfills, in this exact order -->
-        <script src="../node_modules/es6-shim/es6-shim.min.js"></script>
-        <script src="../node_modules/systemjs/dist/system-polyfills.js"></script>
-        <script src="../node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
-        <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
-
-        <script src="../node_modules/systemjs/dist/system.src.js"></script>
-        <script src="../node_modules/rxjs/bundles/Rx.js"></script>
-        <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
-
-        <!-- 2. Configure SystemJS -->
-        <script>
-            System.config({
-                packages: {
-                    app: {
-                        format: 'register',
-                        defaultExtension: 'js'
-                    }
-                },
-                map: {
-                    'app': 'build'
-                }
-            });
-            System.import('app/main')
-                    .then(null, console.error.bind(console));
-        </script>
     </head>
 
-    <!-- 3. Display the application -->
     <body>
         <music-tools>Loading...</music-tools>
     </body>
+
+    <script src="dist/app.bundle.js"></script>
 </html>
