--- a/client/public/index2.html
+++ b/client/public/index2.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <base href="/MusicTools/client/public/">
+
         <meta charset="UTF-8" />
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'" />
 
