--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
-<html data-ng-app="App" data-ng-cloak="">
+<html>
     <head>
+        <base href="/MusicTools/client/public/">
+
         <meta charset="UTF-8" />
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'" />
 
@@ -11,34 +13,12 @@
         <link rel="icon" type="image/x-icon" href="favicon.png" />
 
         <!-- Theme style -->
-        <link type="text/css" rel="stylesheet" href="dist/css/app.min.css" />
+        <!--<link type="text/css" rel="stylesheet" href="dist/css/app.min.css" />-->
     </head>
 
     <body>
-        <!-- Skip navigation for accessibility -->
-        <a href="#content" class="sr-only">Skip navigation and go to content</a>
-
-        <!-- Header -->
-        <ui-header></ui-header>
-
-        <!-- Sidebar -->
-        <layout-sidebar></layout-sidebar>
-
-        <!-- Content -->
-        <div id="content" class="content" data-layout-scrollable="">
-            <!-- Alerts -->
-            <alerts></alerts>
-
-            <!-- Current page -->
-            <div data-ng-view=""></div>
-        </div>
-
-        <!-- Libraries (see Gruntfile.js to know what's included in js/lib.js) -->
-        <script type="text/javascript" src="dist/js/lib.min.js"></script>
-        <!--<script type="text/javascript" src="js/lib.js"></script>-->
-
-        <!-- AngularJS App -->
-        <script type="text/javascript" src="dist/js/app.min.js"></script>
-        <!--<script type="text/javascript" src="js/app.js"></script>-->
+        <music-tools>Loading...</music-tools>
     </body>
+
+    <script src="dist/app.bundle.js"></script>
 </html>
