--- a/client/public/index2.html
+++ b/client/public/index2.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 
-<html>
+<html data-ng-app="App" data-ng-cloak="">
     <head>
-        <base href="/MusicTools/client/public/">
-
         <meta charset="UTF-8" />
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'" />
 
@@ -13,12 +11,34 @@
         <link rel="icon" type="image/x-icon" href="favicon.png" />
 
         <!-- Theme style -->
-        <!--<link type="text/css" rel="stylesheet" href="dist/css/app.min.css" />-->
+        <link type="text/css" rel="stylesheet" href="dist/css/app.min.css" />
     </head>
 
     <body>
-        <music-tools>Loading...</music-tools>
-    </body>
+        <!-- Skip navigation for accessibility -->
+        <a href="#content" class="sr-only">Skip navigation and go to content</a>
 
-    <script src="dist/app.bundle.js"></script>
+        <!-- Header -->
+        <ui-header></ui-header>
+
+        <!-- Sidebar -->
+        <layout-sidebar></layout-sidebar>
+
+        <!-- Content -->
+        <div id="content" class="content" data-layout-scrollable="">
+            <!-- Alerts -->
+            <alerts></alerts>
+
+            <!-- Current page -->
+            <div data-ng-view=""></div>
+        </div>
+
+        <!-- Libraries (see Gruntfile.js to know what's included in js/lib.js) -->
+        <script type="text/javascript" src="dist/js/lib.min.js"></script>
+        <!--<script type="text/javascript" src="js/lib.js"></script>-->
+
+        <!-- AngularJS App -->
+        <script type="text/javascript" src="dist/js/app.min.js"></script>
+        <!--<script type="text/javascript" src="js/app.js"></script>-->
+    </body>
 </html>
