--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
     </head>
 
     <body>
-        <music-tools>
+        <music-tools style="padding-left: 200px;">
             <!--Display loading message while app is bootstrapping -->
             <div class="app-loading">
                 <div class="app-loading-spinner">
